--- a/index.html
+++ b/index.html
@@ -9,32 +9,42 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-  <section class="target">
-    <div class="target__section1">
-      <img src="./images/icon-sedans.svg" alt="icon of car Sedans">
+  <main class="target">
+    <section class="target__section1">
+      <figure>
+        <img src="./images/icon-sedans.svg" alt="icon of car Sedans">
+      </figure>
       <h1>SEDANS</h1>
-      <span>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+      <span>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</span>
       <button class="">Learn More</button>
-    </div>
-    <div class="target__section2">
-      <img src="./images/icon-suvs.svg" alt="icon of car Suvs">
+    </section>
+    <section class="target__section2">
+      <figure>
+        <img src="./images/icon-suvs.svg" alt="icon of car Suvs">
+      </figure>
       <h1>SUVS</h1>
-      <span>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+      <span>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</span>
       <button class="">Learn More</button>
-    </div>
-    <div class="target__section3">
-      <img src="./images/icon-luxury.svg" alt="icon of car Luxury">
+    </section>
+    <section class="target__section3">
+      <figure>
+        <img src="./images/icon-luxury.svg" alt="icon of car Luxury">
+      </figure>
       <h1>LUXURY</h1>
-      <span>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+      <span>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</span>
       <button>Learn More</button>
-    </div>
-  </section>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://twitter.com/IuliusCeasar" target="_blank">Julio César García Rodríguez</a>.
-  </div>
+    </section>
+  </main>
+  <footer class="attribution">
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    </p>
+    <p>
+      Coded by <a href="https://twitter.com/IuliusCeasar" target="_blank">Julio César García Rodríguez</a>.
+    </p>
+  </footer>
 </body>
 </html>
